add label to rigs
