# app/Http/Requests/Equipment/UpdateEquipmentRequest.php
@@ -22,7 +22,6 @@ class UpdateEquipmentRequest extends FormRequest
             'image'          => ['nullable', 'image', 'max:2048', 'mimes:png,jpg,jpeg,webp'],
             'avatar'         => ['nullable', 'image', 'max:2048', 'mimes:png,jpg,jpeg,webp'],
             'file'           => ['nullable', 'image', 'max:2048', 'mimes:png,jpg,jpeg,webp'],
-            'status'         => ['sometimes', Rule::in(['Operational', 'Maintenance', 'Out_of_Service'])],
         ];
     }
 }
